<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="preference_category_tune"
        android:title="Tune Camera"
        >
        <SwitchPreference
            android:key="preference_tune_enabled"
            android:title="색감 튜닝"
            android:summary="저장할 때 아래 프리셋으로 색/질감/얼굴 밝기를 바꿉니다. Ultra HDR 촬영은 제외"
            android:defaultValue="false"
            />

        <ListPreference
            android:key="preference_tune_preset"
            android:title="프리셋"
            android:summary="%s"
            android:entries="@array/tune_preset_entries"
            android:entryValues="@array/tune_preset_values"
            android:defaultValue="iphone"
            android:dependency="preference_tune_enabled"
            />

        <ListPreference
            android:key="preference_tune_brightness"
            android:title="밝기 (사용자 설정)"
            android:summary="%s"
            android:entries="@array/tune_percent20_entries"
            android:entryValues="@array/tune_percent20_values"
            android:defaultValue="0"
            android:dependency="preference_tune_enabled"
            />

        <ListPreference
            android:key="preference_tune_contrast"
            android:title="대비 (사용자 설정)"
            android:summary="%s"
            android:entries="@array/tune_percent30_entries"
            android:entryValues="@array/tune_percent30_values"
            android:defaultValue="0"
            android:dependency="preference_tune_enabled"
            />

        <ListPreference
            android:key="preference_tune_warmth"
            android:title="따뜻함 (사용자 설정)"
            android:summary="%s"
            android:entries="@array/tune_warmth_entries"
            android:entryValues="@array/tune_warmth_values"
            android:defaultValue="0"
            android:dependency="preference_tune_enabled"
            />

        <ListPreference
            android:key="preference_tune_saturation"
            android:title="채도 (사용자 설정)"
            android:summary="%s"
            android:entries="@array/tune_percent30_entries"
            android:entryValues="@array/tune_percent30_values"
            android:defaultValue="0"
            android:dependency="preference_tune_enabled"
            />

        <ListPreference
            android:key="preference_tune_skin"
            android:title="피부 생기 (사용자 설정)"
            android:summary="%s"
            android:entries="@array/tune_skin_entries"
            android:entryValues="@array/tune_skin_values"
            android:defaultValue="0"
            android:dependency="preference_tune_enabled"
            />

        <ListPreference
            android:key="preference_tune_soften"
            android:title="질감 부드럽게 (사용자 설정)"
            android:summary="%s"
            android:entries="@array/tune_soften_entries"
            android:entryValues="@array/tune_soften_values"
            android:defaultValue="0"
            android:dependency="preference_tune_enabled"
            />

        <SwitchPreference
            android:key="preference_tune_face"
            android:title="얼굴 밝게 (사용자 설정)"
            android:summary="얼굴을 찾아서 어두우면 자연스럽게 밝힙니다"
            android:defaultValue="false"
            android:dependency="preference_tune_enabled"
            />

        <SwitchPreference
            android:key="preference_tune_ab_dump"
            android:title="A/B 비교용 원본 저장"
            android:summary="튜닝 전 원본을 Pictures/TuneCamera/AB 폴더에 따로 저장합니다"
            android:defaultValue="false"
            android:dependency="preference_tune_enabled"
            />

        <SwitchPreference
            android:key="preference_tune_galaxy_ui"
            android:title="갤럭시 스타일 화면"
            android:summary="갤럭시 기본 카메라와 비슷한 배치(모드 줄, 줌 버튼, 큰 셔터)를 씁니다. 끄면 Open Camera 원래 화면. 앱을 다시 열면 적용"
            android:defaultValue="true"
            />

        <SwitchPreference
            android:key="preference_tune_cover_rear_selfie"
            android:title="커버 화면에서 후면 카메라 셀카"
            android:summary="폰을 접고 커버 화면에서 앱을 열면 후면 카메라로 자동 전환합니다. 설정 &gt; 유용한 기능 &gt; Labs에서 커버 화면 허용 필요"
            android:defaultValue="true"
            />

        <Preference
            android:key="preference_tune_diagnostics"
            android:title="기기 기능 진단"
            android:summary="이 기기가 서드파티 앱에 열어 둔 카메라 기능을 조회합니다"
            android:icon="@drawable/ic_info_outline_white_48dp"
            >
            <intent
                android:targetPackage="com.shapkeem.camera"
                android:targetClass="com.shapkeem.camera.tune.DiagnosticsActivity"
                />
        </Preference>
    </PreferenceCategory>
    
    <!--<PreferenceCategory
        android:key="preference_category_camera_effects"
        android:title="@string/preference_category_camera_effects"
        >
        -->

        <!--  if we move this to another PreferenceGroup, we should update code for the readFromIntent() call -->
        <!--
        <ListPreference 
            android:key="preference_color_effect"
            android:title="@string/preference_color_effect"
            android:summary="@string/preference_color_effect_summary"
            />
        -->
    
        <!--  if we move this to another PreferenceGroup, we should update code for the readFromIntent() call -->
        <!--
        <ListPreference 
            android:key="preference_scene_mode"
            android:title="@string/preference_scene_mode"
            android:summary="@string/preference_scene_mode_summary"
            />
        -->
    
        <!--  if we move this to another PreferenceGroup, we should update code for the readFromIntent() call -->
        <!--
        <ListPreference 
            android:key="preference_white_balance"
            android:title="@string/preference_white_balance"
            android:summary="@string/preference_white_balance_summary"
            />
        -->

        <!--  if we move this to another PreferenceGroup, we should update code for the readFromIntent() call -->
        <!--
        <ListPreference 
            android:key="preference_iso"
            android:title="@string/preference_iso"
            android:summary="@string/preference_iso_summary"
            />
        -->

        <!--  if we move this to another PreferenceGroup, we should update code for the readFromIntent() call -->
        <!--
        <ListPreference
            android:key="preference_exposure"
            android:title="@string/preference_exposure"
            android:summary="@string/preference_exposure_summary"
            />
        -->

        <!--  if we move this to another PreferenceGroup, we should update code for the findPreference() call -->
        <!--
        <SwitchPreference
            android:key="preference_auto_stabilise"
            android:title="@string/preference_auto_stabilise"
            android:summary="@string/preference_auto_stabilise_summary"
            android:defaultValue="false"
            />
        -->

    <!-- </PreferenceCategory> -->

    <PreferenceCategory
        android:key="preference_category_camera_controls"
        android:title="@string/preference_category_camera_controls">

        <!--  if we move this to another PreferenceGroup, we should update code for the findPreference() call -->
        <SwitchPreference
            android:key="preference_face_detection"
            android:title="@string/preference_face_detection"
            android:summary="@string/preference_face_detection_summary"
            android:defaultValue="false"
            />

        <ListPreference
            android:key="preference_timer"
            android:title="@string/preference_timer"
            android:summary="%s"
            android:icon="@drawable/ic_timer_white_48dp"
            android:entries="@array/preference_timer_entries"
            android:entryValues="@array/preference_timer_values"
            android:defaultValue="0"
            />

        <ListPreference 
            android:key="preference_burst_mode"
            android:title="@string/preference_burst_mode"
            android:summary="%s"
            android:entries="@array/preference_burst_mode_entries"
            android:entryValues="@array/preference_burst_mode_values"
            android:defaultValue="1"
            />

        <ListPreference
            android:key="preference_burst_interval"
            android:title="@string/preference_burst_interval"
            android:summary="%s"
            android:entries="@array/preference_burst_interval_entries"
            android:entryValues="@array/preference_burst_interval_values"
            android:defaultValue="0"
            />

        <PreferenceScreen
            android:key="preference_screen_camera_controls_more"
            android:title="@string/preference_screen_camera_controls_more"
            android:icon="@drawable/ic_more_horiz_white_48dp"
            android:persistent="false"
            android:fragment="net.sourceforge.opencamera.PreferenceSubCameraControlsMore"
            />

        <PreferenceScreen
            android:key="preference_preview"
            android:title="@string/preference_preview"
            android:icon="@drawable/ic_more_horiz_white_48dp"
            android:persistent="false"
            android:fragment="net.sourceforge.opencamera.PreferenceSubPreview"
            />

        <PreferenceScreen
            android:key="preference_screen_gui"
            android:title="@string/preference_screen_gui"
            android:icon="@drawable/ic_more_horiz_white_48dp"
            android:persistent="false"
            android:fragment="net.sourceforge.opencamera.PreferenceSubGUI"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="preference_category_camera_quality"
        android:title="@string/preference_category_camera_quality">

        <PreferenceScreen
            android:key="preference_screen_photo_settings"
            android:title="@string/preference_screen_photo_settings"
            android:icon="@drawable/take_photo_pref"
            android:persistent="false"
            android:fragment="net.sourceforge.opencamera.PreferenceSubPhoto"
            />
    
        <PreferenceScreen
            android:key="preference_screen_video_settings"
            android:title="@string/preference_screen_video_settings"
            android:icon="@drawable/take_video_pref"
            android:persistent="false"
            android:fragment="net.sourceforge.opencamera.PreferenceSubVideo"
            />

        <PreferenceScreen
            android:key="preference_screen_location_settings"
            android:title="@string/preference_screen_location_settings"
            android:icon="@drawable/ic_gps_fixed_white_48dp"
            android:persistent="false"
            android:fragment="net.sourceforge.opencamera.PreferenceSubLocation"
            />

        <PreferenceScreen
            android:key="preference_screen_processing_settings"
            android:title="@string/preference_screen_processing_settings"
            android:icon="@drawable/ic_more_horiz_white_48dp"
            android:persistent="false"
            android:fragment="net.sourceforge.opencamera.PreferenceSubProcessing"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="preference_category_online"
        android:title="@string/preference_category_online"
        >

        <Preference
            android:key="preference_online_help"  
            android:title="@string/preference_online_help"
            android:summary="@string/preference_online_help_summary"
            android:icon="@drawable/ic_help_outline_white_48dp"
            />  

        <!--  if we move this to another PreferenceGroup, we should update code for the findPreference() call -->
        <ListPreference
            android:key="preference_camera_api"
            android:title="@string/preference_camera_api"
            android:summary="@string/preference_camera_api_summary"
            />

        <Preference
            android:key="preference_about"  
            android:title="@string/preference_about"
            android:summary="@string/preference_about_summary"
            android:icon="@drawable/ic_info_outline_white_48dp"
            />

        <Preference
            android:key="preference_privacy_policy"
            android:title="@string/preference_privacy_policy"
            android:summary="@string/preference_privacy_policy_summary"
            android:icon="@drawable/ic_info_outline_white_48dp"
            />

        <PreferenceScreen
            android:key="preference_screen_licences"
            android:title="@string/preference_screen_licences"
            android:icon="@drawable/ic_info_outline_white_48dp"
            android:persistent="false"
            android:fragment="net.sourceforge.opencamera.PreferenceSubLicences"
            />

        <PreferenceScreen
            android:key="preference_screen_settings_manager"
            android:title="@string/preference_screen_settings_manager"
            android:icon="@drawable/settings"
            android:persistent="false"
            android:fragment="net.sourceforge.opencamera.PreferenceSubSettingsManager"
            />

        </PreferenceCategory>
        
</PreferenceScreen>
